# protmetrics

./: .gitignore  CCTBX_PARITY_REVIEW.md  pyproject.toml
docs/: sidechain_metrics.md  structural_validation_metrics.md  take_home_assignment.md
scripts/: cross_validate_cctbx.py  extract_cdl_cacb.py  extract_geometry_restraints.py  extract_rama_tables.py  extract_rotamer_tables.py  noise_sweep.py  noise_sweep_cctbx.py  validate_cctbx.py
src/protmetrics/: __init__.py  angles.py  bonds.py  ramachandran.py
src/protmetrics/allatom/: __init__.py  cbeta.py  clashes.py  constants.py  dihedrals.py  energy.py  geometry.py  losses.py  recovery.py  rotamers.py
src/protmetrics/allatom/geom_data/: cdl_cacb.pt  geom_restraints.pt
src/protmetrics/backbone/: __init__.py  angles.py  bonds.py  clashes.py  constants.py  dihedrals.py  ramachandran.py
src/protmetrics/rama_data/: rama_tables.pt
tests/: conftest.py  test_angles.py  test_bonds.py  test_clashes.py  test_dihedrals.py  test_ramachandran.py
