[project]
name = "protmetrics"
version = "0.1.0"
description = "Pure PyTorch structural validation metrics for protein backbones"
requires-python = ">=3.10"
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"protmetrics.backbone" = ["rama_data/*.pt"]
